# chiba

./: CMakeLists.txt  Cargo.toml  README.md  backup.toml  upload.sh
.cache/clangd/index/: main.c.78BAC722FFF5667A.idx  tusb_config.h.B1B4835BACFD5DAE.idx  usb_descriptors.c.F735647E4FF559C5.idx  usb_descriptors.h.481351F68994B422.idx
.cargo/: config.toml
src/: main.c  main.rs
