[package]
name = "chiba"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rp-pico = "0.8.0"
embedded-hal = "0.2.7"
cortex-m = "0.7.7"
cortex-m-rt = "0.7.3"
cortex-m-rtic = "1.1.4"
panic-halt = "0.2.0"
rp2040-hal = "0.9.1"
usb-device = "0.3.1"
usbd-hid = "0.5.2"
usbd-serial = "0.1.1"
